# python-log-viewer

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: README.md
examples/django_example/: README.md  manage.py
examples/django_example/config/: settings.py  urls.py
examples/fastapi_example/: README.md  app.py
examples/flask_example/: README.md  app.py
src/python_log_viewer/: __init__.py  _html.py  auth.py  core.py
src/python_log_viewer/contrib/: __init__.py  fastapi.py  flask.py
src/python_log_viewer/contrib/django/: __init__.py  apps.py  urls.py  views.py
